--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ httpx==0.28.1
 idna==3.11
 python-telegram-bot==21.6
 requests==2.32.5
+python-telegram-bot[job-queue]==21.6
 typing_extensions==4.15.0
 urllib3==2.6.3
